samples/_failures_safe/1761726446_21c90f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83249dea.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_83249dea.c:157:12: error: missing terminating " character
  157 |     printf("Dijk
      |            ^~~~~
./samples/SAFE/__tmp_83249dea.c:157:5: error: expected expression at end of input
  157 |     printf("Dijk
      |     ^~~~~~
./samples/SAFE/__tmp_83249dea.c:157:5: error: expected declaration or statement at end of input
